# claw

./: .gitignore  BUILD_REVIEW.md  DEPLOY.md  MUSL-PATHS.md  Makefile.am  README.md  SPEC.md  autogen.sh  configure.ac  configure~
.github/: copilot-instructions.md
config/: claw.conf
contrib/: install-hooks.sh
include/: claw-build.h  claw-string.h  claw-time.h  claw-version.h.in  claw.h  config.h  dag.h  hashmap.h  ipc.h  log.h  mem.h  os.h  service.h  state.h  supervisor.h  target.h  vector.h
m4/: ax_check_compile_flag.m4
scripts/: README.md  build-standalone.sh  bump-version.sh  deploy.sh  package-dimsim.sh
src/claw/: main.c
src/clawctl/: main.c
src/core/config/: parser.c  paths.c
src/core/dag/: graph.c
src/core/service/: service.c  supervisor.c
src/core/state/: state.c
src/ipc/: ipc.c
src/os/: mount.c
src/util/: claw-string.c  claw-time.c  hashmap.c  log.c  mem.c  vector.c
