# Claw Init System — Automake input
# ---------------------------------------------------------------------------
# Built with: automake --foreign subdir-objects
# Two binaries: sbin/claw (daemon) and bin/clawctl (control tool)
# Three convenience libraries: libutil.a, libipc.a, libcore.a
# ---------------------------------------------------------------------------

# ---------------------------------------------------------------------------
# Global compiler flags
# AM_CPPFLAGS: preprocessor (-I, -D) — separate from compiler flags
# AM_CFLAGS:   per-translation-unit compiler flags
# ---------------------------------------------------------------------------
AM_CPPFLAGS = \
	-I$(top_srcdir)/include \
	-I$(top_builddir)/include \
	-D_POSIX_C_SOURCE=200809L

AM_CFLAGS = \
	-std=c99 \
	$(WARN_CFLAGS) \
	$(SECURITY_CFLAGS)

# ---------------------------------------------------------------------------
# Build-time version header — regenerated each build from git state.
# Uses a .tmp + cmp trick so object files are not invalidated unless the
# commit ID or dirty flag actually changed.
# ---------------------------------------------------------------------------
BUILT_SOURCES = include/claw-build.h
CLEANFILES    = include/claw-build.h

include/claw-build.h: FORCE
	@$(MKDIR_P) include
	@commit=$$(git -C '$(top_srcdir)' rev-parse --short HEAD 2>/dev/null || echo unknown); \
	 if git -C '$(top_srcdir)' diff --quiet 2>/dev/null && \
	    git -C '$(top_srcdir)' diff --cached --quiet 2>/dev/null; then \
	   dirty=0; sfx=; \
	 else dirty=1; sfx=-dirty; fi; \
	 printf '/* Auto-generated by make — do not edit. */\n' > $@.tmp; \
	 printf '#ifndef CLAW_BUILD_H\n#define CLAW_BUILD_H\n' >> $@.tmp; \
	 printf '#define CLAW_BUILD_ID "%s%s"\n' "$$commit" "$$sfx" >> $@.tmp; \
	 printf '#define CLAW_BUILD_DIRTY %d\n' "$$dirty" >> $@.tmp; \
	 printf '#endif /* CLAW_BUILD_H */\n' >> $@.tmp; \
	 if ! cmp -s $@.tmp $@ 2>/dev/null; then \
	   mv $@.tmp $@; \
	   echo "  GEN      $@"; \
	 else rm $@.tmp; fi

.PHONY: FORCE
FORCE:

# ---------------------------------------------------------------------------
# Convenience libraries (noinst: built but not installed)
# ---------------------------------------------------------------------------
noinst_LIBRARIES = libutil.a libipc.a libcore.a

libutil_a_SOURCES = \
	src/util/claw-string.c \
	src/util/claw-time.c \
	src/util/hashmap.c \
	src/util/log.c \
	src/util/mem.c \
	src/util/vector.c

libipc_a_SOURCES = \
	src/ipc/ipc.c

# libcore: daemon-only modules (not linked into clawctl)
libcore_a_SOURCES = \
	src/core/config/parser.c \
	src/core/dag/graph.c \
	src/core/service/service.c \
	src/core/service/supervisor.c \
	src/core/state/state.c \
	src/core/target/target.c \
	src/os/mount.c

# ---------------------------------------------------------------------------
# Binaries
# sbin_PROGRAMS -> $(sbindir)   (typically /sbin or /usr/local/sbin)
# bin_PROGRAMS  -> $(bindir)    (typically /bin  or /usr/local/bin)
# ---------------------------------------------------------------------------
sbin_PROGRAMS = claw
bin_PROGRAMS  = clawctl

claw_SOURCES = src/claw/main.c
claw_LDADD   = libcore.a libipc.a libutil.a
claw_LDFLAGS = $(BINARY_LDFLAGS)

clawctl_SOURCES = src/clawctl/main.c
clawctl_LDADD   = libipc.a libutil.a
clawctl_LDFLAGS = $(BINARY_LDFLAGS)

# ---------------------------------------------------------------------------
# Configuration data files
# dist_*_DATA: installed AND included in 'make dist' tarballs
# ---------------------------------------------------------------------------
clawconfdir        = $(sysconfdir)/claw
dist_clawconf_DATA = config/claw.conf

clawservicesdir        = $(clawconfdir)/services.d
dist_clawservices_DATA =

clawtargetsdir        = $(clawconfdir)/targets.d
dist_clawtargets_DATA = \
	config/targets.d/claw-basic.target.yml \
	config/targets.d/claw-early.target.yml \
	config/targets.d/claw-multiuser.target.yml \
	config/targets.d/claw-network.target.yml

# ---------------------------------------------------------------------------
# Runtime directory creation hook
# Always use $(DESTDIR) so packaging tools (dpkg, rpm) can stage into a
# temporary root rather than writing to the live filesystem.
# ---------------------------------------------------------------------------
install-data-local:
	$(MKDIR_P) $(DESTDIR)$(localstatedir)/lib/claw
	$(MKDIR_P) $(DESTDIR)$(localstatedir)/log/claw
	$(MKDIR_P) $(DESTDIR)$(sysconfdir)/claw
	@echo "# Auto-generated by make install — do not edit manually." \
	    > $(DESTDIR)$(sysconfdir)/claw/units.manifest
	@for f in $(dist_clawservices_DATA); do \
	    echo "$(sysconfdir)/claw/services.d/$$(basename $$f)" \
	        >> $(DESTDIR)$(sysconfdir)/claw/units.manifest; \
	done
	@for f in $(dist_clawtargets_DATA); do \
	    echo "$(sysconfdir)/claw/targets.d/$$(basename $$f)" \
	        >> $(DESTDIR)$(sysconfdir)/claw/units.manifest; \
	done
	@echo "Generated $(DESTDIR)$(sysconfdir)/claw/units.manifest"

# ---------------------------------------------------------------------------
# Extra files included in 'make dist' tarballs (not covered by other vars)
# ---------------------------------------------------------------------------
EXTRA_DIST = \
	autogen.sh \
	README.md \
	SPEC.md \
	DEPLOY.md \
	MUSL-PATHS.md \
	LICENSE \
	scripts/build-standalone.sh \
	scripts/package-dimsim.sh \
	scripts/deploy.sh

# ---------------------------------------------------------------------------
# Lint target (not part of standard automake check machinery)
# ---------------------------------------------------------------------------
.PHONY: lint
lint:
	@command -v clang-format >/dev/null 2>&1 || \
	    { echo "clang-format not found"; exit 1; }
	find $(top_srcdir)/src $(top_srcdir)/include \
	    -name "*.c" -o -name "*.h" | xargs clang-format -i
	@echo "Code formatted"

# ---------------------------------------------------------------------------
# Test infrastructure hooks (empty for now; fill in as tests are added)
# ---------------------------------------------------------------------------
TESTS =
check_PROGRAMS =

# ---------------------------------------------------------------------------
# Deployment configuration
# Default staging directory for sysroot builds
# ---------------------------------------------------------------------------
SYSROOT_STAGING ?= $(CURDIR)/sysroot-staging

# ---------------------------------------------------------------------------
# Deployment targets for BlueyOS packaging
# ---------------------------------------------------------------------------

# Stage installation to a sysroot directory for packaging or disk imaging
.PHONY: install-sysroot
install-sysroot:
	@echo "Installing to staging directory: $(SYSROOT_STAGING)"
	mkdir -p $(SYSROOT_STAGING)
	$(MAKE) install DESTDIR=$(SYSROOT_STAGING)
	@echo ""
	@echo "Sysroot staged at: $(SYSROOT_STAGING)"
	@echo "Installed files:"
	@find $(SYSROOT_STAGING) -type f | sort

# Create deployment tarball from staged sysroot
.PHONY: dist-sysroot
dist-sysroot: install-sysroot
	@echo "Creating sysroot tarball: claw-sysroot-$(VERSION).tar.gz"
	tar -C $(SYSROOT_STAGING) -czf claw-sysroot-$(VERSION).tar.gz .
	@echo "Created: claw-sysroot-$(VERSION).tar.gz"
	@ls -lh claw-sysroot-$(VERSION).tar.gz

# Generate MD5 checksum manifest for verification
.PHONY: install-manifest
install-manifest: install-sysroot
	@echo "Generating file manifest..."
	@find $(SYSROOT_STAGING) -type f -exec md5sum {} \; \
	  | sed "s|$(SYSROOT_STAGING)||" \
	  | sort > claw-manifest.txt
	@echo "File manifest: claw-manifest.txt"

# Verify deployed files match manifest
.PHONY: verify-manifest
verify-manifest:
	@if [ ! -f claw-manifest.txt ]; then \
	    echo "ERROR: claw-manifest.txt not found. Run 'make install-manifest' first."; \
	    exit 1; \
	fi
	@echo "Verifying files against manifest..."
	@total=0; ok=0; \
	while read hash file; do \
	    total=$$((total + 1)); \
	    md5_actual=$$(md5sum "$(SYSROOT_STAGING)$$file" 2>/dev/null | cut -d' ' -f1); \
	    if [ "$$md5_actual" = "$$hash" ]; then \
	        ok=$$((ok + 1)); \
	    else \
	        echo "MISMATCH: $$file (expected $$hash, got $$md5_actual)"; \
	    fi; \
	done < claw-manifest.txt; \
	echo "Verification: $$ok/$$total files OK"; \
	if [ $$ok -ne $$total ]; then exit 1; fi

# Package as dimsim .dpk using the staging sysroot
.PHONY: package-dimsim
package-dimsim: install-sysroot
	@command -v zstd >/dev/null 2>&1 || \
	    { echo "ERROR: zstd not found. Install zstandard compression."; exit 1; }
	@command -v jq >/dev/null 2>&1 || \
	    { echo "ERROR: jq not found. Install jq for JSON processing."; exit 1; }
	@echo "Creating dimsim package from sysroot..."
	@mkdir -p $(CURDIR)/dist
	@$(top_srcdir)/scripts/package-dimsim.sh $(SYSROOT_STAGING) $(CURDIR)/dist
	@echo ""
	@echo "Dimsim package ready in: $(CURDIR)/dist/"
	@ls -lh $(CURDIR)/dist/*.dpk 2>/dev/null

# Full deployment workflow: build → stage → package
.PHONY: deploy-package
deploy-package: package-dimsim
	@echo ""
	@echo "Deployment complete!"
	@echo "Next steps:"
	@echo "  1. Copy package to BlueyOS: scp dist/*.dpk root@blueyos:/tmp/"
	@echo "  2. Install: ssh root@blueyos dimsim install /tmp/*.dpk"
	@echo "  3. Verify: ssh root@blueyos clawctl status"

.PHONY: show-layout
show-layout:
	@echo "Sysroot directory structure:"
	@if [ -d "$(SYSROOT_STAGING)" ]; then \
	    tree -F "$(SYSROOT_STAGING)" 2>/dev/null || find "$(SYSROOT_STAGING)" -print | sed -e "s|[^/]*/| |g;s|^ ||"; \
	else \
	    echo "Sysroot not found. Run 'make install-sysroot' first."; \
	fi
